# bcycle

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml  tmp_fred_info.txt
.claude/: settings.local.json
.github/workflows/: monthly_update.yml
config/: cn_signals.yaml  stage_content.yaml
config/cn/: manufacturing.yaml
config/eu/: manufacturing.yaml
config/jp/: indicators.yaml  manufacturing.yaml  settings.yaml
config/kr/: indicators.yaml  settings.yaml
config/us/: indicators.yaml  manufacturing.yaml  settings.yaml
data/: inv_cycle_summary.json  oecd_data1.txt  oecd_decode.txt  oecd_decode2.txt  oecd_dfs.txt  oecd_lfs.txt  oecd_probe1.txt  oecd_probe2.txt  oecd_probe3.txt  oecd_struct.txt  oecd_struct2.txt  probe_cs_kei.txt  probe_cs_kei2.txt  run_jp_out.txt  run_kr_out.txt  run_kr_out3.txt  run_us_out.txt  stes_flows.txt  stes_raw.txt  stes_raw.xml  stes_xml_struct.txt  test_oecd.txt  test_oecd2.txt  test_oecd3.txt
data/jp/: cycle_detail.json
data/kr/: cycle_detail.json
data/us/: cycle_detail.json
docs/: index.html
reports/: 2026-05.md  2026-06.md  README.md
scripts/: 01_jp_mvp.py  _dump_stes_xml.py  _probe_cs_kei.py  _probe_cs_kei2.py  _probe_stes.py  _test_oecd.py  _test_oecd2.py  _test_oecd3.py  analysis_a.py  generate_dashboard.py  generate_report.py  resolve_estat_ids.py  run_cycle.py  run_inventory_cycle.py
src/bcycle_jp/: __init__.py
src/bcycle_jp/adapters/: base.py  bloomberg.py  ecos.py  estat.py  fred.py  french.py  oecd.py  (+1 more)
tests/: test_estat_adapter.py  test_fred_adapter.py  test_normalize.py  test_splice.py
(+8 files in other folders)
