[project]
name = "bcycle-jp"
version = "0.1.0"
description = "Japan Business Cycle Classification Model (MVP)"
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.2",
    "numpy>=1.26",
    "pyyaml>=6.0",
    "requests>=2.31",
    "matplotlib>=3.8",
    "python-dotenv>=1.0",
    "fredapi>=0.5",
    "pyarrow>=14.0",
    "scipy>=1.11",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.1",
    "jupyter>=1.0",
    "ipykernel>=6.0",
]
bloomberg = [
    # blpapi はPyPI非公開。Bloomberg提供のwheelを別途インストール
    # https://www.bloomberg.com/professional/support/api-library/
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/bcycle_jp"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
